# euler

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  test-system-graph.rs
crates/euler-agents/: Cargo.toml
crates/euler-agents/src/: lib.rs
crates/euler-cli/: Cargo.toml
crates/euler-cli/src/: auth_commands.rs  auth_validation.rs  auth_validation_test.rs  bundled_extensions.rs  cli_tests.rs  code_swarm_config.rs  companion_run.rs  diagnostics.rs  extension_cli.rs  extension_enablement.rs  fixture_script.rs  help.rs  login.rs  main.rs  main_exec_tests.rs  main_extension_tests.rs  main_session_export_tests.rs  main_tests.rs  model_catalog.rs  model_catalog_refresh.rs  model_catalog_refresh_tests.rs  model_preference.rs  model_resolution.rs  offline_extension_runner.rs  provider_catalog.rs  provider_config_runtime.rs  session_export.rs  session_lifecycle.rs  subagent.rs  theme_catalog.rs
crates/euler-cli/src/cli/: args.rs  command.rs  extension_run.rs  mod.rs  model_resolution.rs  permission.rs  providers.rs  raw_args.rs  scrub.rs  session.rs  terminal.rs
crates/euler-cli/src/extension_cli/: observer.rs  output.rs
crates/euler-cli/src/fixture_script/: tests.rs
crates/euler-cli/src/ui/: activity.rs  app.rs  app_layout.rs  banner.rs  bottom_surface.rs  commands.rs  composer.rs  composer_editor_tests.rs  consent_prompt.rs  dirty.rs  event_loop.rs  external_clipboard.rs  external_editor.rs  glyphs.rs  history_insert.rs  markdown.rs  markdown_stream.rs  markdown_tests.rs  metrics.rs  mod.rs  patch_approval.rs  patch_diff.rs  search.rs  status.rs  syntax.rs  terminal.rs  test_backend.rs  test_support.rs  text.rs  theme.rs  transcript.rs  transcript_patch_tests.rs  transcript_tests.rs  tui_decider.rs  visual_canvas.rs  workspace_files.rs
crates/euler-cli/tests/: allow_ratchet.rs  architecture.rs  cli_help.rs  headless.rs  hex_color_ratchet.rs
crates/euler-core/: Cargo.toml
crates/euler-core/src/: apply_patch.rs  apply_patch_test.rs  auth_storage.rs  canvas.rs  canvas_test.rs  checkpoints.rs  command_safety.rs  compaction.rs  compaction_test.rs  diagnostics.rs  durability.rs  extension_registry.rs  extension_registry_test.rs  extensions.rs  extensions_test.rs  file_diff.rs  grants.rs  guardian.rs  home.rs  lib.rs  permission_matrix_test.rs  permissions.rs  project_context.rs  provenance.rs  provenance_test.rs  redaction.rs  resume.rs  sandbox.rs  sandbox_test.rs  scrub.rs  scrub_test.rs  session.rs  session_kind.rs  session_name.rs  session_root.rs  session_store.rs  session_store_test.rs  session_test.rs  swarm.rs  tools.rs  (+1 more)
crates/euler-core/src/project_context/: acknowledgment.rs  budget.rs  digest.rs  discovery.rs  fold.rs  framing.rs  manifest.rs  relocation.rs  tests.rs
crates/euler-core/src/provenance/: scrub.rs
crates/euler-core/src/session/: background.rs  companion.rs  companion_test.rs  extension_bridge.rs  observer.rs  observer_test.rs  parallel_spawn.rs  parallel_spawn_test.rs  permissions_gate.rs  round_loop.rs  steering.rs  steering_lifecycle_test.rs  swarm_context.rs  swarm_context_test.rs  swarm_tool.rs  swarm_tool_test.rs  tool_dispatch.rs
crates/euler-core/src/tests/: auth_storage.rs
crates/euler-core/tests/: agents.rs  event_wake.rs  extension_panic_hook.rs  file_diff_snapshot.rs  guardian.rs  provenance.rs  provenance_query.rs  replay_cost.rs  resume.rs  resume_equivalence.rs  send_assertions.rs  session_loop.rs  session_projections.rs  session_store_discovery_integrity.rs  session_store_lifecycle.rs
crates/euler-extension-autoresearch/: Cargo.toml
crates/euler-extension-autoresearch/src/: lib.rs  lib_test.rs
crates/euler-extension-causal-dag/: Cargo.toml
crates/euler-extension-causal-dag/assets/: palette.json
crates/euler-extension-causal-dag/assets/viewer/: README.md  constellation-3-5d.html  constellation-3d.html  indented-spine.html  runtime.js  top-down.html
crates/euler-extension-causal-dag/src/: active_state.rs  export.rs  lib.rs  observer_apply.rs  observer_brief.rs  projection.rs  record_observation.rs  refresh.rs  research_enable.rs  research_observer.rs  research_observer_tests.rs  research_projection.rs  research_record.rs  research_record_tests.rs  research_state.rs  revision.rs  slot_summary.rs  tests.rs  view.rs
crates/euler-extension-causal-dag/src/export/: graph.rs  html.rs  palette.rs  svg.rs  text.rs
crates/euler-extension-causal-dag/src/projection/: hints.rs
crates/euler-extension-causal-dag/src/research_observer/: task.rs
crates/euler-extension-causal-dag/src/research_projection/: presentation.rs
crates/euler-extension-causal-dag/tests/: live_catch_up.rs  observer_loop.rs  schema_conformance.rs
crates/euler-extension-code-swarm/: Cargo.toml
crates/euler-extension-code-swarm/src/: lib.rs
crates/euler-extension-diagnostics-report/: Cargo.toml
crates/euler-extension-diagnostics-report/src/: lib.rs
crates/euler-extension-session-export/: Cargo.toml
crates/euler-extension-session-export/src/: lib.rs  tests.rs
crates/euler-managed-process/: Cargo.toml
crates/euler-managed-process/src/: lib.rs  protocol.rs  runtime.rs
crates/euler-managed-process/tests/: python_sdk.rs
crates/euler-provider/: Cargo.toml
crates/euler-provider/catalog/: README.md
crates/euler-provider/src/: anthropic.rs  auth.rs  catalog.rs  chat_completions.rs  chat_completions_provider.rs  chatgpt.rs  chatgpt_device.rs  chatgpt_device_tests.rs  chatgpt_test.rs  chatgpt_websocket.rs  conformance_tests.rs  custom_provider.rs  custom_provider_test.rs  lib.rs  openai.rs  openai_test.rs  openrouter.rs  openrouter_test.rs  provider_config.rs  provider_config_test.rs  scripted_provider_test.rs  sse.rs  test_support.rs  xai.rs  xai_test.rs
crates/euler-provider/tests/: model_catalog_metadata.rs
crates/euler-sdk/: Cargo.toml
crates/euler-sdk/src/: capability_test.rs  event_checkpoint.rs  event_wake.rs  extension_package.rs  extension_package_test.rs  lib.rs
crates/euler-tools/: Cargo.toml
crates/euler-tools/tests/: allow_ratchet.rs
python/euler_managed_process_sdk/: pyproject.toml
(+133 files in other folders)
