[package]
name = "euler-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
euler-event = { path = "../euler-event" }
euler-sdk = { path = "../euler-sdk" }
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true

[lints]
workspace = true
