[package]
name = "euler-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "euler"
path = "src/main.rs"

[dependencies]
euler-core = { path = "../euler-core" }
euler-event = { path = "../euler-event" }
euler-extension-autoresearch = { path = "../euler-extension-autoresearch" }
euler-extension-causal-dag = { path = "../euler-extension-causal-dag" }
euler-extension-code-swarm = { path = "../euler-extension-code-swarm" }
euler-extension-diagnostics-report = { path = "../euler-extension-diagnostics-report" }
euler-extension-maxproof = { path = "../euler-extension-maxproof" }
euler-extension-session-export = { path = "../euler-extension-session-export" }
euler-managed-process = { path = "../euler-managed-process" }
euler-provider = { path = "../euler-provider" }
euler-sdk = { path = "../euler-sdk" }
anyhow.workspace = true
chrono.workspace = true
crossterm = "0.29"
diffy = "0.4"
pulldown-cmark = { version = "0.13", default-features = false }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm", "layout-cache", "underline-color"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
url.workspace = true
libc.workspace = true
signal-hook = "0.3"
unicode-width = "0.2"

[dev-dependencies]
insta = "1"
portable-pty = "0.9"
tempfile.workspace = true
vt100 = "0.15"

[lints]
workspace = true
