[package]
name = "euler-extension-causal-dag"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
euler-event = { path = "../euler-event" }
euler-sdk = { path = "../euler-sdk" }
serde_json.workspace = true

[dev-dependencies]
euler-core = { path = "../euler-core" }
euler-provider = { path = "../euler-provider" }
tempfile.workspace = true

[lints]
workspace = true
