[package]
name = "euler-extension-causal-dag"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
euler-agents = { path = "../euler-agents" }
euler-event = { path = "../euler-event" }
euler-sdk = { path = "../euler-sdk" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
euler-core = { path = "../euler-core" }
euler-provider = { path = "../euler-provider" }
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
