[package]
name = "euler-extension-diagnostics-report"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
euler-sdk = { path = "../euler-sdk" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
