[package]
name = "euler-extension-session-export"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
euler-sdk = { path = "../euler-sdk" }
serde_json.workspace = true

[dev-dependencies]
euler-core = { path = "../euler-core" }
euler-event = { path = "../euler-event" }
tempfile.workspace = true

[lints]
workspace = true
