[package]
name = "euler-managed-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
euler-sdk = { path = "../euler-sdk" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
