[package]
name = "euler-provider"
edition.workspace = true
license.workspace = true
version.workspace = true
include = ["src/**", "tests/**", "catalog/**"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
url.workspace = true
tungstenite.workspace = true
ulid.workspace = true

[lints]
workspace = true
