[package]
name = "euler-sdk"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
euler-event = { path = "../euler-event" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
