[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-managed-process-sdk"
version = "0.1.1"
description = "Python SDK for Euler managed-process extensions"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
